# Alt

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .pytest.ini  .python-version  .readthedocs.yaml  CLAUDE.md  Dockerfile  Dockerfile-orange-pi  Dockerfile-orin  README.md  aarch-requirements.txt  add_sphinx_docstrings.py  armrequirements.txt  convertToOnnx.py  convertToRknn.py  currentlyWorkingEnv.txt  dev-requirements.txt  docker-compose-opi.yml  docker-compose-orin.yml  docker-compose.yml  final_status.md  gradual_typing.md  main.py  main2.py  mainProcess.service  minimumalignmentenv.txt  mypy.ini  mypyerrors.txt  netPacket.capnp  non-base-requirements.txt  opiProcess.service  opiProcessRestricted.service  opiProcessUnrestricted.service  probmapWebcamtest.py  pyproject.toml  requirements-py-3-10.txt  requirements-py-3-11.txt  requirements.txt  (+13 more)
ALt-Trajectories/: TrajectoriesCalcNoHood  deltas.json  deltascalc.py  trajectories.json  trajectorycalc.py
Alt-Cameras/: README.md  pyproject.toml  setup.cfg
Alt-Cameras/src/Alt/Cameras/: __init__.py
Alt-Cameras/src/Alt/Cameras/Agents/: CameraUsingAgent.py  CameraUsingAgentBase.py  VideoWriterAgent.py  __init__.py
Alt-Cameras/src/Alt/Cameras/Calibration/: CalibrationUtil.py
Alt-Cameras/src/Alt/Cameras/Captures/: CameraCapture.py  Capture.py  D435Capture.py  FakeCapture.py  FileCapture.py  OAKCapture.py  OpenCVCapture.py  __init__.py  depthCamera.py  utils.py
Alt-Cameras/src/Alt/Cameras/Captures/tools/: calibration.py  depthAiHelper.py  realsense2Helper.py
Alt-Cameras/src/Alt/Cameras/Parameters/: CameraCalibration.py  CameraConfig.py  CameraExtrinsics.py  CameraIntrinsics.py  Extrinsics.py  Intrinsics.py  __init__.py
Alt-Cameras/src/Alt/Cameras/Proto/: FramePacket.py
Alt-Cameras/tests/Agents/: test_CameraUsingAgent.py
Alt-Captures/: setup.cfg
Alt-Core/: FramePacket.py  README.md  pyproject.toml  setup.cfg
Alt-Core/src/Alt/: AgentOperator.py  ConfigOperator.py  LogManager.py  Order.py  OrderOperator.py  ShareOperator.py  StreamOperator.py
Alt-Core/src/Alt/Agents/: AgentConstants.py
Alt-Core/src/Alt/Agents/Abstract/: CameraUsingAgentBase.py
Alt-Core/src/Alt/Captures/: CameraCapture.py  D435Capture.py  FileCapture.py  OAKCapture.py  __init__.py  utils.py
Alt-Core/src/Alt/Common/: ensureXTablesServer.py  network.py
Alt-Core/src/Alt/Common/tests/: test_network.py  test_timefmt.py
Alt-Core/src/Alt/Constants/: AgentConstants.py  Field.py  __init__.py
Alt-Core/src/Alt/Constants/tests/: test_Field.py  test_Teams.py  test_agentConstants.py
Alt-Core/src/Alt/Core/: Neo.py  __init__.py
Alt-Core/src/Alt/Core/Agents/: Agent.py  AgentExample.py  BindableAgent.py  PositionLocalizingAgentBase.py  __init__.py
Alt-Core/src/Alt/Core/Constants/: AgentConstants.py  Field.py  Teams.py  __init__.py  field.py
Alt-Core/src/Alt/Core/Operators/: AgentOperator.py  ConfigOperator.py  FlaskOperator.py  LogOperator.py  LogStreamOperator.py  PropertyOperator.py  ShareOperator.py  StreamOperator.py  StreamProxy.py  TimeOperator.py  UpdateOperator.py
Alt-Core/src/Alt/Core/TestUtils/: AgentTests.py  ensureXTablesServer.py
Alt-Core/src/Alt/Core/Tests/: AgentTests.py  ensureXTablesServer.py
Alt-Core/src/Alt/Core/Units/: Conversions.py  Measurements.py  Poses.py  Types.py
Alt-Core/src/Alt/Core/Utils/: NtUtils.py  XTutils.py  files.py  network.py  timeFmt.py
Alt-Core/src/Alt/Core/tests/: test_agent.py
Alt-Core/tests/Common/: test_network.py  test_timefmt.py
Alt-Core/tests/Constants/: test_Field.py  test_Teams.py  test_agentConstants.py
Alt-Core/tests/Core/: test_agent.py
Alt-Dashboard/: README.md  pyproject.toml  setup.cfg
Alt-Dashboard/src/Alt/Dashboard/: AgentManager.py  dashboard.py
Alt-Dashboard/src/Alt/Dashboard/static/: createStatus.js  style.css
Alt-Dashboard/src/Alt/Dashboard/templates/: index.html
Alt-ObjectLocalization/: README.md  pyproject.toml  setup.cfg
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Agents/: InferenceAgent.py  ObjectLocalizingAgentBase.py  ObjectLocalizingStep1AgentBase.py  ObjectLocalizingStep2AgentBase.py  __init__.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Constants/: Inference.py  InferenceC.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Detections/: detectionNetPacket.capnp
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Estimation/: KalmanLabeler.py  UKF.py  generalUKF.py  particleFilter.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Inference/: ModelConfig.py  inferencerBackend.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Inference/backends/: onnxInferencer.py  rknnInferencer.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Localization/: DepthEstimationMethod.py  PipelineStep1.py  PipelineStep2.py  positionEstimator.py  probmap.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/Tracking/: robotTracker.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/inference/: MultiInferencer.py  inferencerBackend.py  utils.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/inference/backends/: TensorrtInferencer.py  ultralyticsInferencer.py  utils.py
Alt-ObjectLocalization/src/Alt/ObjectLocalization/mapinternals/: probmap.py
Alt-ObjectLocalization/tests/: test_kalmanCache.py  test_kalmanLabler.py  test_localPipeline.py  test_probmap.py
Alt-ObjectLocalization/tests/Agents/: test_inferenceAgent.py
Alt-Pathplanning/: MANIFEST.in  pyproject.toml
Alt-Pathplanning/src/Alt/: PathFind.py
Alt-Pathplanning/src/Alt/Pathplanning/: AStar.py  PathGenerator.py  TestingObstacles.py  bezierCurveServer.py  obstacleMapGenerator.py  utils.py
Alt-Pathplanning/src/Alt/Pathplanning/nmc/: fastMarchingMethodClass.py  static_obstacles_inch.json
Alt-Pathplanning/src/Alt/nmc/: BezierCurve_pb2.py  __init__.py  static_obstacles_inch_red_far.json  static_obstacles_inch_red_mid.json
Docker/: docker-compose.yml
Scripts/: setup.sh
assets/: blueRobotHist.npy  qual25.csv  redRobotHist.npy
centralizedTracking/: testDeepsort.py  tracker.py
coreinterface/: CoreInput.py  CoreOutput.py
docker-base/: Dockerfile
docs/: README.md  (+6 more)
(+531 files in other folders)
