[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Matrix-Alt-Cameras"
version = "0.0.1"
description = "Extension for the Matrix-Alt-Core package to add camera functionality"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "The Matrix 488", email = "488matrix@gmail.com" }
]

urls = {
  "Homepage" = "https://github.com/Team488/Alt",
  "Bug Tracker" = "https://github.com/Team488/Alt/issues",
  "repository" = "https://github.com/Team488/Alt"
}

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "Matrix-Alt-Core == 0.0.1",
  "numpy == 2.0.2",
  "opencv-python == 4.11.0.86",
  "scipy == 1.13.1",
  "pycapnp == 2.0.0",
  "depthai == 2.30.0.0",
  "pyrealsense2 == 2.55.1.6486"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
