[metadata]
name = Alt-Cameras
version = 1.0.0
author = The Matrix 488
author_email = 488matrix@gmail.com
description = Contains apis to read from various cameras
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Team488/Alt
project_urls =
    Bug Tracker = https://github.com/Team488/Alt/issues
    repository = https://github.com/Team488/Alt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    Alt-Core == 1.0.0
    numpy==2.0.2
    opencv-python==4.11.0.86
    scipy==1.13.1
    pycapnp==2.0.0
    depthai==2.30.0.0
    pyrealsense2==2.55.1.6486




[options.packages.find]
where = src
