[metadata]
name = Alt-Captures
version = 1.0.0
author = The Matrix 488
author_email = 488matrix@gmail.com
description = Various Camera Captures for Alt Agents
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Team488/Alt
project_urls =
    Bug Tracker = https://github.com/Team488/Alt/issues
    repository = https://github.com/Team488/Alt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
