[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Matrix-Alt-Core"
version = "0.0.1"
description = "Matrix-Alt-Core is a Matrix-themed Python framework designed for FRC robotics competitions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "The Matrix 488", email = "488matrix@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "Flask == 3.1.0",
  "XTablesClient == 5.7.9",
  "numpy == 2.0.2",
  "opencv-python == 4.11.0.86",
  "typing-extensions>=4.0.0",
  "types-requests == 2.32.4.20250611",
  "mypy == 1.16.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.urls]
"Homepage" = "https://github.com/Team488/Alt"
"Bug Tracker" = "https://github.com/Team488/Alt/issues"
"repository" = "https://github.com/Team488/Alt"
