[metadata]
name = Alt-Core
version = 1.0.0
author = The Matrix 488
author_email = 488matrix@gmail.com
description = Core package to create and run python code for the Matrix
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Team488/Alt
project_urls =
    Bug Tracker = https://github.com/Team488/Alt/issues
    repository = https://github.com/Team488/Alt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:

python_requires = >=3.9
install_requires =
    Flask==3.1.0
    XTablesClient==5.7.9
    numpy==2.2.4
    opencv-python==4.11.0.86
    Flask-SocketIO==5.5.1

[options.packages.find]
where = src
